# DefSec-Hunter

./: README.md  pyproject.toml
DefSecHunter/: defsec.py  replit.nix
DefSecHunter/config/: default.yaml
DefSecHunter/modules/: aws_scanner.py  recon.py  scanner.py  service_scanner.py  vulndb.py  webvuln.py
DefSecHunter/utils/: validators.py
modules/: enum.py  poc_generator.py  reporter.py  shell.py
utils/: bible_verses.py
