[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "boto3==1.34.14",
    "cryptography==41.0.7",
    "dnspython==2.4.2",
    "modules>=1.0.0",
    "paramiko==3.4.0",
    "python-whois==0.8.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "rich==13.7.0",
    "urllib3==2.0.7",
]
